# RB_Humanoid_Control

./: .envrc  .gitignore  MASTER_PLAN.md  MILESTONE_REVALIDATION_GUIDE.md  README.md  ROADMAP_SIMPLE.md  STATUS.md  compile_commands.json  main.py
docs/: MASTER_PLAN.md
docs/sim2real/: overview.md
docs/stage1/: overview.md
experiments/: run_m8_and_m9.sh  run_m8_pair.sh  run_m9_kpi.sh
experiments/profiles/: m5_stand.env
experiments/tmuxp/: m1_sensor.yaml  m5_pose_audit.yaml  m5_stand.yaml  m7_stand_safecheck.yaml  m8_disturb.yaml
experiments/tmuxp/legacy/: joint_sign_audit.yaml  m2_controller.yaml  m3_command.yaml  m4_clamp.yaml  m4_joint_limit.yaml  m4_tilt.yaml  m4_timeout.yaml  m4_velocity.yaml  m5_baseline.yaml  m5_stand_sanity.yaml
logs/sim2real/m5/20260314-121949_m5_stand_sanity_qrefv7/m5/: loop_post_sync.txt  sync_markers.txt
logs/sim2real/m7/20260314-133954_m7_stand_safecheck/m7/: fall_event.txt  loop_post_sync.txt  reason_count.txt  sync_markers.txt
logs/sim2real/m8/20260314-184316/balance_off/: disturb_kpi.txt  fall_event.txt
logs/sim2real/m8/20260314-184316/balance_on/: disturb_kpi.txt
logs/sim2real/m8/20260314-184442/balance_off/: disturb_kpi.txt  fall_event.txt
logs/sim2real/m8/20260314-184442/balance_on/: disturb_kpi.txt  fall_event.txt
logs/sim2real/m8/20260314-184609/balance_off/: disturb_kpi.txt  fall_event.txt
logs/sim2real/m8/20260314-184609/balance_on/: disturb_kpi.txt
logs/sim2real/m9/: index.csv
logs/sim2real/m9/20260315-000113/: balance_off_kpi.json  balance_on_kpi.json  comparison.json  summary.md
ops/: run_m8_and_m9.sh  run_m8_pair.sh  run_m9_kpi.sh
ops/profiles/: m7_stand_safecheck.env  m8_disturb.env
ops/tmuxp/: README.md  joint_sign_audit.yaml  m1_sensor.yaml  m2_controller.yaml  m3_command.yaml  m4_clamp.yaml  m4_joint_limit.yaml  m4_tilt.yaml  m4_timeout.yaml  m4_velocity.yaml  m5_baseline.yaml  m5_pose_audit.yaml  m5_stand.yaml  m5_stand_sanity.yaml  m7_stand_safecheck.yaml  m8_disturb.yaml
ops/tmuxp/legacy/: joint_sign_audit.yaml  m4_joint_limit.yaml  m4_tilt.yaml  m5_baseline.yaml  m5_stand_sanity.yaml
rb_utils/: __init__.py  action_generators.py  experiment.py  experiment_runner.py  rollout_runner.py  summary_writer.py  termination_utils.py
reports/sim2real/: ONE_PAGER.md  overview.md
reports/stage1/: ONE_PAGER.md  overview.md
ros2_ws/: .envrc  .envrc.save
ros2_ws/src/rb_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/rb_bringup/config/: joint_order_g1.yaml  m5_stack_relaxed.yaml  m7_stack_safety_on.yaml  m8_stack_disturb.yaml  stand_qref_g1_seed.yaml  standing_controller_baseline.yaml
ros2_ws/src/rb_bringup/launch/: native_stack.launch.py  ros2_control.launch.py
ros2_ws/src/rb_bringup/urdf/: g1_ros2_control.xacro
ros2_ws/src/rb_controller/: CMakeLists.txt  COLCON_IGNORE  package.xml
ros2_ws/src/rb_controller/config/: safety.yaml
ros2_ws/src/rb_controller/config/scenarios/: baseline_zero.yaml  clamp.yaml  joint_limit.yaml  joint_sign_audit.yaml  stand_pd_balance_base.yaml  stand_pd_balance_off.yaml  stand_pd_balance_on.yaml  stand_pd_default.yaml  stand_pd_safecheck.yaml  stand_pd_sanity.yaml  tilt.yaml  timeout.yaml  velocity.yaml
ros2_ws/src/rb_controller/launch/: controller.launch.py
ros2_ws/src/rb_controller/msg/: EstimatedState.msg
ros2_ws/src/rb_controller/src/: command_bridge_node.cpp  controller_debug_logger.cpp  controller_debug_logger.hpp  controller_node.cpp  controller_runtime_state.hpp  controller_stand_utils.cpp  controller_stand_utils.hpp  controller_tilt_observer.cpp  controller_tilt_observer.hpp  controller_types.hpp  estimator_node.cpp  safety_node.cpp
ros2_ws/src/rb_estimation/: CMakeLists.txt  package.xml
ros2_ws/src/rb_estimation/src/: controller_tilt_observer.cpp  controller_tilt_observer.hpp  estimator_node.cpp
ros2_ws/src/rb_hardware_interface/: CMakeLists.txt  package.xml  plugin_description.xml
ros2_ws/src/rb_hardware_interface/include/rb_hardware_interface/: rb_hardware_system.hpp
ros2_ws/src/rb_hardware_interface/src/: rb_hardware_system.cpp
ros2_ws/src/rb_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/rb_interfaces/msg/: EstimatedState.msg
ros2_ws/src/rb_playground/: package.xml  setup.cfg  setup.py
ros2_ws/src/rb_playground/rb_playground/: hello_node.py
ros2_ws/src/rb_safety/: CMakeLists.txt  package.xml
ros2_ws/src/rb_safety/src/: safety_node.cpp
ros2_ws/src/rb_standing_controller/: CMakeLists.txt  package.xml  plugin_description.xml
ros2_ws/src/rb_standing_controller/include/rb_standing_controller/: rb_standing_controller.hpp
ros2_ws/src/rb_standing_controller/src/: rb_standing_controller.cpp
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/rsl_rl/: play.py  train.py
scripts/sim2real/: capture_m1_topics.sh  dump_joint_order.py  extract_m8_kpi.py  generate_g1_stand_qref.py  joint_state_delta.py  main.py  run_sensor_source.py
scripts/sim2real/app/: __init__.py  command_apply_graph_builder.py  config.py  graph_builder.py  graph_config.py  graph_prim_resolver.py  log_markers.py  phase_handlers.py  phase_registry.py  phase_runtime.py  phases.py  run_io.py  sensor_graph_builder.py  telemetry.py  topic_capture.py  world.py  world_factory.py  world_runtime.py  world_spawn.py
scripts/sim2real/config/: default.yaml  joint_limits_g1.yaml  legacy_rb_controller_safety.yaml  safety.yaml
scripts/sim2real/kpi/: __init__.py  model.py  parsers.py  writers.py
scripts/stage1/: run_stage1.py
source/RB_Humanoid_Control/: setup.py
source/RB_Humanoid_Control/RB_Humanoid_Control/: ui_extension_example.py
source/RB_Humanoid_Control/RB_Humanoid_Control/tasks/manager_based/rb_humanoid_control/: RB_Humanoid_Control.code-workspace  __init__.py  rb_humanoid_control_env_cfg.py  rb_stage1_g1_stand_env_cfg.py
source/RB_Humanoid_Control/config/: extension.toml
source/RB_Humanoid_Control/docs/: CHANGELOG.rst
tools/: doctor.sh  isaac_python.sh
